gtpb_clientside/website/styles/styles.css
* {
	font-family: tahoma, arial, sans-serif;
}

html, 
body {
	height:100%;
	overflow:hidden;
}	
   
body {
	/*background:#1b3447 url('../images/bg-intro.jpg') repeat-x center 135px;
	*/
	padding:0;
	margin:0;
	font-size:10pt;
}

body.mobile {
	margin: 20px;
}

#scroller {
	position:relative;
	width:100%;
	height:100%;
	overflow:auto;	
}

#tl_wrapper {
	background:#1b3447 url('../images/bg-intro.jpg') repeat-x center 135px;
	position:relative;
}

.popup {
	display:none;
	width:200px;
	height:200px;
	border:5px solid red;
	background:white;
	z-index:999999999999999;
	margin-left:auto;
    margin-right:auto; 
}

.popupWrapper {
  width:100%;
  height:100%;
  position:absolute;
  top:0;
  left:0;
  z-index:999999999999999;  
}

.popupWrapper td {
  textAlign:center;
  verticalAlign:center;
}
   
.wrapper {
	text-align:center;
	clear:both;
	z-index:1;
}

.content {
	margin-left:auto;
	margin-right:auto;
	width:875px;
	text-align:left;
	position:relative;
	overflow:visible;
}      
   
#header {
	height:135px;
	background-color:#ffffff;
}
   
#header .content #home {
	display:block;
	position:absolute;
	height:65px;
	width:253px;
	left:0;
	top:35px;
 }

#header .content #home img {
	border:0;
}
   
#header table {
	position:absolute;
	top:25px;
	right:20px;
	border-collapse:collapse;
}

#header table.mobileLogin {
	right:auto;
}
   
#header table td {
	padding:10px 30px;
}

#header table.mobileLogin td {
	padding-left:0px;
}

#header table .row1 td {
	border-bottom:1px solid #333333;
}

#header table td.col1 {      	
	border-right:1px dashed #333333;
}

#header table * {
	font-size:16pt;
	color:#666666;
	text-decoration:none;
}

#header table.mobileLogin * {
	font-size: 10pt;
}
   
#header table a:hover {
	color:#333333;
	text-decoration:underline;
}

#intro {
	sbackground:#50add6 url('../images/bg-intro.jpg') repeat-x center top;
	position: relative;
}

#intro .content {
	height:455px;
}

#login {
	background:transparent url('../images/bg-login.png') no-repeat right top;
	padding:10px 15px;
	width:300px;
	height:90px;
	position:absolute;
	top:0;
	right:0;
}

#login #button_login {
	font-family: tahoma, arial, sans-serif;
	display:block;
	width:85px;
	height:45px;
	background:transparent url('../images/sprite-login.png') no-repeat right top;
	position:absolute;
	bottom:-30px;
	right:-30px;
	padding-left:10px;
	padding-right:50px;
	padding-top:20px;
	font-size:16pt;
	color:#ffffff;
	text-decoration:none;
}

#login #button_login:hover {
	background-position:right bottom;
}

.input {
	background:transparent url('../images/bg-input.png') no-repeat left center;
	padding:5px;
	width:300px;
	height:21px;
	font-size:12pt;
	color:#ffffff;
	margin-bottom:5px;
}

.input input {
	border:0;
	outline:none;
	font-size:12pt;
	color:#333333;
	margin-left:40px;
	width:175px;
}

#intro #bubble {
	background:transparent url('../images/bg-bubble.png') no-repeat top left;
	padding:10px;
	width:325px;
	height:250px;
	position:absolute;
	top:20px;
	left:0;
	font-size:12pt;
	font-family: "Pigiarniq", tahoma, arial, sans-serif;
	color:#333333;
}

#intro #announce {
	width:330px;
	height:320px;
	position:absolute;
	top:145px;
	right:0;
	text-align:right;
}

#intro #bubble h1 {
	font-size:17pt;
	font-variant:bold;
	word-spacing: 1px;
	font-family: "Pigiarniq", tahoma, arial, sans-serif;
	text-align:left;
}

#screenshots {
	width:300px;
	height:320px;
	position:relative;
	padding:10px;
	right:0;
	text-align:right;
}	

#screenshots img {
	border: 0;
}		

#navigation {
	position:absolute;
	left:35px; /* compensation for the negative margin on the li */
	bottom:0;
	margin:0;
	padding:0;
}

#navigation li {
	float:left;
	padding:0;
	margin:0;
	margin-left:-35px;
	list-style-type:none;
 }
 
 #navigation li#li_analyst {
 	margin-left:-55px;
 }
 
 #navigation li a {
 	color:#ffffff;
 	text-decoration:none;
 	display:block;
 	width:185px;
 	padding-top:230px;
 	text-align:center;
 	background:transparent url('../images/sprite-peeps.png') no-repeat left top;
 	margin-right:15px;
 	outline:none;
 }
 
 #navigation li a#nav_technical {
 	background-position:left center;
 }
 
 #navigation li a#nav_analyst {
 	background-position:left bottom;
 }
 
 #navigation li a:hover {
 	background-position:right top;
 }	
 
 #navigation li a#nav_technical:hover {
 	background-position:right center;
 }
 
 #navigation li a#nav_analyst:hover {
 	background-position:right bottom;
 }  		  
 
 #navigation li a span {
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
 	width:155px;
 	padding-top:17px;
 	padding-bottom:10px;
 	margin-bottom:0;
 	font-size:12pt;
	font-family: "Pigiarniq", tahoma, arial, sans-serif;
 	background:transparent url('../images/sprite-tab.png') no-repeat left -65px;
 }
 
 #navigation li a#nav_main span {
 	background-position:left 10px;
 }
 
 #navigation li a:hover span {
 	background-position:center -65px;
 	color:black;
 }
 
 #navigation li a#nav_main:hover span {
   background-position:center 10px;
 }
 
 #navigation li a.current {
 	position:relative;
 	background-position:-207px top;
 	z-index:99;		  
 }		
 
 #navigation li a#nav_technical.current {
 	background-position:-207px center;
 }
 
 #navigation li a#nav_analyst.current {
 	background-position:-207px bottom;
 }   
 		  
 #navigation li a.current span {
 	position:relative;
 	background-position:right -65px;
 	bottom:-2px;		
 	color:white;  	
 }	
 
 #navigation li a#nav_main.current span {
	background-position:right 10px;
 }
			
.detail {
	color:#bbbbbb;
	border-top:2px solid white;
	width:500px;
	padding-top:15px;
}

.detail * {
	color:#bbbbbb;
	font-size:10pt;	
}

.detail ul {
	margin-left:40px;
}

.detail ul li {
	padding-bottom:5px;
}

.detail table {
	margin-top:20px;
}

.detail td {
	padding-right:10px;
	vertical-align:top;
	padding-bottom:15px;	
}

.detail td h2 {
	
}

.detail div.divider {
	padding-bottom:20px;
	border-bottom:1px dashed #bbbbbb;
	margin-bottom:20px;
}

.detail a {
	color: #dddddd;
}

.detail h1,
.detail h2 {
	font-weight:normal;
	font-size:16pt;
	color:#dddddd;
	margin-bottom:5px;	
	padding-bottom:0;
}	
		
 .detail h2 {
	font-size:14pt;
}

.detail p {
	margin-bottom:10px;	
}

#main {
	display:block;
}

#main *, #technical *, #analyst * {
	font-family: "Pigiarniq", tahoma, arial, sans-serif;
}

#technical {
	display:none;
}

#analyst {
	display:none;
}

#detail_right {
	width:330px;
	float:right;
	padding-top:25px;
	border-top:1px dashed #bbbbbb;
}

#just_in img {
	width: 1em;
	height: 1em;
}

#just_in td {
	vertical-align: center;
}

#just_in td span {
	position: relative;
}

.just_in_time {
	text-align: left;
}

.just_in_time .just_tooltip {
	background: white url('../images/just-in-time.png') no-repeat scroll 0 0;
}

.just_enough {
	text-align: center;
}

.just_enough .just_tooltip {
	background: white url('../images/just-enough.png') no-repeat scroll 0 0;
}

.just_for_us {
	text-align: right;
}

.just_for_us .just_tooltip {
	background: white url('../images/just-for-us.png') no-repeat scroll 0 0;
}

.just_tooltip {
	position: absolute;
	display: none;
	background: white;
	opacity: 0.9;
	left: -90px;
	height: 40px;
	width: 230px;
	color: black;
	font-family: tahoma, arial, sans-serif!important;
	text-align: left;
	line-height: 1.4em;
	margin: 0;
	padding: 5px 5px 5px 55px;
	top: -1.4em;
	z-index: 100;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
}

#footer {
	margin-top:70px;
	border-top:1px solid white;
	padding-bottom:30px;
	color:white;
	font-size:8pt;
}

#footer * {
	font-family: "Pigiarniq", tahoma, arial, sans-serif;
}

